NetBSD Problem Report #42651

From yamt@NetBSD.org  Wed Jan 20 12:28:25 2010
Return-Path: <yamt@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1270)
	id 342FE63C54F; Wed, 20 Jan 2010 12:28:25 +0000 (UTC)
Message-Id: <20100120122825.342FE63C54F@www.NetBSD.org>
Date: Wed, 20 Jan 2010 12:28:25 +0000 (UTC)
From: yamt@NetBSD.org
Reply-To: yamt@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: iscsi-target i/o buffer mt problem
X-Send-Pr-Version: 3.95

>Number:         42651
>Category:       bin
>Synopsis:       iscsi-target i/o buffer mt problem
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 20 12:30:00 +0000 2010
>Closed-Date:    Mon Jan 31 03:26:19 +0000 2011
>Last-Modified:  Mon Jan 31 03:26:19 +0000 2011
>Originator:     YAMAMOTO Takashi
>Release:        NetBSD-current
>Organization:

>Environment:
>Description:
	it seems that nothing prevents iscsi_disk_t::buffer from being used
	by other sessions at the same time.
>How-To-Repeat:
	code inspection.
>Fix:

>Release-Note:

>Audit-Trail:
From: YAMAMOTO Takashi <yamt@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42651 CVS commit: src/external/bsd/iscsi/dist
Date: Wed, 3 Mar 2010 00:44:52 +0000

 Module Name:	src
 Committed By:	yamt
 Date:		Wed Mar  3 00:44:52 UTC 2010

 Modified Files:
 	src/external/bsd/iscsi/dist/include: iscsiprotocol.h
 	src/external/bsd/iscsi/dist/src/lib: disk.c target.c

 Log Message:
 fix multi-thread problems wrt read/write buffer.  PR/42651.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/external/bsd/iscsi/dist/include/iscsiprotocol.h
 cvs rdiff -u -r1.5 -r1.6 src/external/bsd/iscsi/dist/src/lib/disk.c
 cvs rdiff -u -r1.6 -r1.7 src/external/bsd/iscsi/dist/src/lib/target.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Stephen Borrill <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42651 CVS commit: pkgsrc
Date: Fri, 4 Jun 2010 16:24:56 +0000

 Module Name:	pkgsrc
 Committed By:	sborrill
 Date:		Fri Jun  4 16:24:56 UTC 2010

 Modified Files:
 	pkgsrc/doc: CHANGES-2010
 	pkgsrc/net/netbsd-iscsi-initiator: Makefile PLIST
 	pkgsrc/net/netbsd-iscsi-target: Makefile PLIST
 Removed Files:
 	pkgsrc/net/netbsd-iscsi-initiator: distinfo
 	pkgsrc/net/netbsd-iscsi-initiator/patches: patch-aa
 	pkgsrc/net/netbsd-iscsi-target: distinfo
 	pkgsrc/net/netbsd-iscsi-target/patches: patch-aa

 Log Message:
 Update to latest NetBSD -current sources rather than being built from
 ancient sources predating a move in the repo.

 Source does not maintain a CHANGELOG. It is anticipated that most changes
 are build related, though PR/42651 is also addressed by this.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2112 -r1.2113 pkgsrc/doc/CHANGES-2010
 cvs rdiff -u -r1.1.1.1 -r1.2 pkgsrc/net/netbsd-iscsi-initiator/Makefile \
     pkgsrc/net/netbsd-iscsi-initiator/PLIST
 cvs rdiff -u -r1.1.1.1 -r0 pkgsrc/net/netbsd-iscsi-initiator/distinfo
 cvs rdiff -u -r1.1.1.1 -r0 pkgsrc/net/netbsd-iscsi-initiator/patches/patch-aa
 cvs rdiff -u -r1.1.1.1 -r1.2 pkgsrc/net/netbsd-iscsi-target/Makefile \
     pkgsrc/net/netbsd-iscsi-target/PLIST
 cvs rdiff -u -r1.1.1.1 -r0 pkgsrc/net/netbsd-iscsi-target/distinfo
 cvs rdiff -u -r1.1.1.1 -r0 pkgsrc/net/netbsd-iscsi-target/patches/patch-aa

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 06 Jun 2010 06:21:26 +0000
State-Changed-Why:
is this fixed now?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 31 Jan 2011 03:26:19 +0000
State-Changed-Why:
I guess this is fixed now.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.