fix multi-thread problems wrt read/write buffer.  PR/42651.